--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,6 +6,7 @@
     tools:context=".presentation.HomeFragment">
 
     <TextView
+        android:id="@+id/string"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Hello" />
