--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
     tools:context=".presentation.HomeFragment">
 
     <TextView
-        android:id="@+id/string"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
+        android:id="@+id/bolek"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="22sp"
+        tools:text="Hello" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/lolek"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="hillow"
+        android:textSize="22sp"
+        android:layout_marginTop="16dp"/>
+
+</LinearLayout>
